# Simple-Particle-Collision

./: CMakeLists.txt  README.md  build.sh  main.cpp
src/: particles.cpp  particles.hpp
